--- a/MSBuild/Android/Platform.Default.props
+++ b/MSBuild/Android/Platform.Default.props
@@ -6,6 +6,6 @@
 
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-  <Import Project="$(VCTargetsPath)\Platforms\Android\Microsoft.Cpp.Android.default.props" />
+  <Import Project="$(MSBuildThisFileDirectory)\Microsoft.Cpp.Android.default.props" />
 
 </Project>
