--- a/MSBuild/Android/Platform.targets
+++ b/MSBuild/Android/Platform.targets
@@ -6,6 +6,6 @@
 
 <Project ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-  <Import Project="$(VCTargetsPath)\Platforms\Android\Microsoft.Cpp.Android.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)\Microsoft.Cpp.Android.targets" />
 
 </Project>
