--- a/MSBuild/Android/vs-android.CppBuild.targets
+++ b/MSBuild/Android/vs-android.CppBuild.targets
@@ -29,8 +29,8 @@
   <ItemGroup>
     <!-- Property pages that always apply -->
     <PropertyPageSchema Include="
-        $(VCTargetsPath)\Platforms\Android\Props\android_project_items_schema.xml;
-        $(VCTargetsPath)\Platforms\Android\Props\android_debugger.xml;
+        $(MSBuildThisFileDirectory)\Props\android_project_items_schema.xml;
+        $(MSBuildThisFileDirectory)\Props\android_debugger.xml;
         $(VCTargetsPath)$(LangID)\debugger_general.xml;
         $(VCTargetsPath)$(LangID)\midl.xml;
         $(VCTargetsPath)$(LangID)\build_events.xml;
@@ -49,7 +49,7 @@
          in the alternative locations. To avoid duplicate schemas, we don't include them
          if they already exist in $(VCTargetsPath)$(LangID)\debugger_*.xml -->
     <PropertyPageSchema Condition="!Exists('$(VCTargetsPath)$(LangID)\debugger_general.xml')" Include="$(VCTargetsPath)$(LangID)\debugger_general.xml" />
-    <PropertyPageSchema Condition="!Exists('$(VCTargetsPath)\Platforms\Android\Props\android_debugger.xml')" Include="$(VCTargetsPath)\Platforms\Android\Props\android_debugger.xml" />
+    <PropertyPageSchema Condition="!Exists('$(MSBuildThisFileDirectory)\Props\android_debugger.xml')" Include="$(MSBuildThisFileDirectory)\Props\android_debugger.xml" />
 
     <!-- Property sheet specific property pages -->
     <PropertyPageSchema Include="$(VCTargetsPath)$(LangID)\usermacros.xml">
@@ -57,24 +57,24 @@
     </PropertyPageSchema>
 
     <!-- Switch view between project property based directories and environment variables -->
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Android\Props\android_sys_dirs.xml" />
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\android_sys_dirs.xml" />
 
     <!-- Non-Utility project property pages -->
     <PropertyPageSchema Condition="'$(ConfigurationType)' != 'Utility'" Include="
-        $(VCTargetsPath)\Platforms\Android\Props\android_gcc_compile.xml;
+        $(MSBuildThisFileDirectory)\Props\android_gcc_compile.xml;
         $(VCTargetsPath)$(LangID)\custom_build_step.xml;
     "/>
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Android\Props\android_gcc_link.xml" Condition="'$(ConfigurationType)' == 'Application' or '$(ConfigurationType)' == 'DynamicLibrary'" />
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Android\Props\android_ant_build.xml" Condition="'$(ConfigurationType)' == 'Application'" />
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Android\Props\android_deploy.xml" Condition="'$(ConfigurationType)' == 'Application'" />
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Android\Props\android_gcc_lib.xml" Condition="'$(ConfigurationType)' == 'StaticLibrary'" />
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\android_gcc_link.xml" Condition="'$(ConfigurationType)' == 'Application' or '$(ConfigurationType)' == 'DynamicLibrary'" />
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\android_ant_build.xml" Condition="'$(ConfigurationType)' == 'Application'" />
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\android_deploy.xml" Condition="'$(ConfigurationType)' == 'Application'" />
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\android_gcc_lib.xml" Condition="'$(ConfigurationType)' == 'StaticLibrary'" />
   </ItemGroup>
 
   <ItemGroup>
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Android\Props\android_general.xml">
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\android_general.xml">
       <Context>Project</Context>
     </PropertyPageSchema>
-    <PropertyPageSchema Include="$(VCTargetsPath)\Platforms\Android\Props\android_general_ps.xml">
+    <PropertyPageSchema Include="$(MSBuildThisFileDirectory)\Props\android_general_ps.xml">
       <Context>PropertySheet</Context>
     </PropertyPageSchema>
   </ItemGroup>
