--- a/MSBuild/Emscripten/PlatformToolsets/emcc/Microsoft.Cpp.Emscripten.emcc.props
+++ b/MSBuild/Emscripten/PlatformToolsets/emcc/Microsoft.Cpp.Emscripten.emcc.props
@@ -1,16 +1,9 @@
-﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup Condition="'$(EmccPath)' != ''">
+﻿<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
     <PlatformToolsetVersion>1</PlatformToolsetVersion>
     <PlatformShortName>emcc</PlatformShortName>
     <GccCompiler>$(EmccPath)\emcc.bat</GccCompiler>
     <GccLinker>$(EmccPath)\emcc.bat</GccLinker>
     <GccLibrarian>$(EmccPath)\emcc.bat</GccLibrarian>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(EmccPath)' == ''">
-    <PlatformToolsetVersion>1</PlatformToolsetVersion>
-    <PlatformShortName>emcc</PlatformShortName>
-    <GccCompiler>emcc.bat</GccCompiler>
-    <GccLinker>emcc.bat</GccLinker>
-    <GccLibrarian>emcc.bat</GccLibrarian>
   </PropertyGroup>
 </Project>
