--- a/Source/vs-tool.Build.CPPTasks/vs-tool.Build.CPPTasks.vs2012.csproj
+++ b/Source/vs-tool.Build.CPPTasks/vs-tool.Build.CPPTasks.vs2012.csproj
@@ -33,8 +33,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.Build.CPPTasks.Common.v110, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\MSBuild\Microsoft.Cpp\v4.0\V110\Microsoft.Build.CPPTasks.Common.v110.dll</HintPath>
+      <HintPath>$(ProgramFiles)\MSBuild\Microsoft.Cpp\v4.0\V110\Microsoft.Build.CPPTasks.Common.v110.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Build.Framework" />
     <Reference Include="Microsoft.Build.Tasks.v4.0" />
@@ -81,7 +80,7 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
