--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,10 @@
 version: 1.0.{build}
 
 environment:
-  EMSDK: "C:\\emsdk"
-  ANDROID_HOME: "C:\\android-sdk-windows"
-  ANDROID_NDK_HOME: "C:\\android-sdk-windows\\ndk-bundle"
-  JAVA_HOME: "C:\\Program Files\\Java\\jdk1.8.0"
-  EMSCRIPTEN_VERSION: 1.37.26
-  EMSCRIPTEN: c:\emsdk\emscripten\1.37.26
-  LLVM_ROOT: c:\emsdk\clang\e1.37.26_64bit
-  CLANG_BIN: c:\emsdk\clang\e1.37.26_64bit
+  EMSDK: C:\emsdk
+  ANDROID_HOME: C:\android-sdk-windows
+  ANDROID_NDK_HOME: C:\android-sdk-windows\ndk-bundle
+  CLANG_BIN: C:\Libraries\llvm-5.0.0
   MINGW_BIN: C:\mingw-w64\x86_64-6.3.0-posix-seh-rt_v5-rev1
   matrix:
     # Visual Studio 2010
